--- a/index.html
+++ b/index.html
@@ -4,52 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dra. Ornella di Leone - Pediatria</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Roboto', sans-serif; background: #f4f4f4; color: #333; line-height: 1.6; }
+    body {
+      font-family: 'Baloo 2', sans-serif;
+      background: #fffaf1;
+      color: #333;
+      line-height: 1.6;
+    }
 
     /* Header */
     header {
       background: linear-gradient(
         to right, 
-        rgb(250, 245, 234), /* Light beige color on the left */
-        rgb(250, 245, 234) 50%, /* Transition starts at 50% */
-        #ff9a9e /* Pink color on the right */
+        rgb(250, 245, 234) 0%,  
+        rgb(250, 245, 234) 50%,  
+        rgb(252, 225, 183) 60%,  
+        rgb(231, 165, 137) 100%  
       );
-      color: #333; /* Darker text color for better contrast */
-      padding: 20px; /* Padding inside the header */
+      color: #333;
+      padding: 20px;
       display: flex;
       align-items: center;
-      justify-content: flex-start; /* Align items to the start (left) */
-      position: relative;
-      overflow: hidden;
-      height: 400px; /* Set header height to 400px */
+      justify-content: flex-start;
+      height: 400px;
     }
     header .container {
       display: flex;
       align-items: center;
-      justify-content: flex-start; /* Align items to the start (left) */
+      justify-content: flex-start;
       width: 100%;
       max-width: 1100px;
       margin: 0 auto;
       padding: 0 20px;
     }
     header img {
-      width: 400px; /* Set logo width to 400px */
-      height: 400px; /* Set logo height to 400px */
-      margin-right: 20px; /* Add spacing between the logo and text */
+      width: 400px;
+      height: 400px;
+      margin-right: 20px;
     }
     header .text {
       flex: 1;
       text-align: left;
     }
-    header h1 { font-size: 3rem; margin-bottom: 10px; } /* Larger font size for the header */
-    header p { font-size: 1.5rem; } /* Larger font size for the subtitle */
+    header h1 { font-size: 3rem; margin-bottom: 10px; }
+    header p { font-size: 1.5rem; }
 
     /* Nav */
     nav {
-      background: #fff;
+      background: #ffddc1;
       padding: 15px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       display: flex;
@@ -60,9 +64,9 @@
       text-decoration: none;
       color: #333;
       font-weight: bold;
-      transition: color 0.3s;
+      transition: color 0.3s, transform 0.2s;
     }
-    nav a:hover { color: #ff6f61; }
+    nav a:hover { color: #ff6f61; transform: scale(1.1); }
 
     /* Main Content */
     .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
@@ -70,23 +74,38 @@
       background: #fff;
       margin-bottom: 20px;
       padding: 40px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
     }
-    section h2 { text-align: center; margin-bottom: 20px; }
+    section:hover { transform: translateY(-3px); }
+    section h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #ff6f61;
+      font-size: 2rem;
+    }
     #about img.doctor-photo {
-      max-width: 300px;
+      max-width: 250px;
       width: 100%;
       display: block;
-      margin: 20px auto 0;
-      border-radius: 8px;
+      margin: 20px auto;
     }
-    ul { list-style: none; }
+    ul { list-style: none; padding: 0; }
     ul li {
       padding: 10px;
       border-bottom: 1px solid #eee;
+      font-size: 1.2rem;
     }
     ul li:last-child { border-bottom: none; }
+
+    /* Fun Elements */
+    .fun-text {
+      font-size: 1.3rem;
+      text-align: center;
+      margin-top: 10px;
+    }
+    .lion-emoji { font-size: 1.5rem; }
 
     /* Footer */
     footer {
@@ -95,17 +114,14 @@
       background: #333;
       color: #fff;
     }
-    @media (min-width: 768px) {
-      section { padding: 60px 40px; }
-    }
   </style>
 </head>
 <body>
   <header>
     <div class="container">
-      <img src="logo.png" alt="Logo da Dra. Ornella di Leone" /> <!-- Logo à esquerda -->
+      <img src="logo.png" alt="Logo da Dra. Ornella di Leone" />
       <div class="text">
-        <h1>Dra. Ornella di Leone</h1>
+        <h1>Dra. Ornella di Leone 🦁</h1>
         <p>Sua Parceira em Cuidados Pediátricos</p>
       </div>
     </div>
@@ -119,25 +135,22 @@
   </nav>
   <div class="container">
     <section id="about">
-      <h2>Sobre Mim</h2>
-      <p>Olá! Eu sou a Dra. Ornella di Leone, pediatra com mais de 10 anos de experiência cuidando de crianças. Meu objetivo é garantir que cada criança tenha um começo de vida saudável e feliz, com muita compaixão e cuidado.</p>
-      <img src="ornella.png" alt="Dra. Ornella di Leone" class="doctor-photo" /> <!-- Foto da Dra. Ornella -->
+      <h2>Sobre Mim 🦁</h2>
+      <p>Olá! Eu sou a Dra. Ornella di Leone, pediatra com mais de 10 anos de experiência cuidando de crianças.</p>
+      <img src="ornella.png" alt="Dra. Ornella di Leone" class="doctor-photo" />
+      <p class="fun-text">Cuidando dos pequenos com muito carinho! 🦁</p>
     </section>
     <section id="services">
-      <h2>Serviços</h2>
+      <h2>Serviços 🦁</h2>
       <ul>
-        <li>Consultas Pediátricas Gerais</li>
-        <li>Vacinações e Imunizações</li>
-        <li>Exames de Rotina</li>
-        <li>Acompanhamento de Nutrição e Crescimento</li>
-        <li>Atendimento de Emergência Pediátrica</li>
+        <li>👶 Consultas Pediátricas Gerais</li>
+        <li>💉 Vacinações e Imunizações</li>
+        <li>📋 Exames de Rotina</li>
       </ul>
     </section>
     <section id="contact">
-      <h2>Contato</h2>
+      <h2>Contato 🦁</h2>
       <p>Email: <a href="mailto:draornella@example.com">draornella@example.com</a></p>
-      <p>Telefone: (123) 456-7890</p>
-      <p>Endereço: Rua Saúde, 123, Cidade Médica</p>
     </section>
   </div>
   <footer>
