embedded python added

--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
     }
     ul li:last-child { border-bottom: none; }
 
-    /* Fun Elements */
-    .fun-text {
-      font-size: 1.3rem;
-      text-align: center;
-      margin-top: 10px;
-    }
-    .lion-emoji { font-size: 1.5rem; }
-
     /* Footer */
     footer {
       text-align: center;
@@ -121,7 +113,7 @@
     <div class="container">
       <img src="logo.png" alt="Logo da Dra. Ornella di Leone" />
       <div class="text">
-        <h1>Dra. Ornella di Leone 🦁</h1>
+        <h1>Dra. Ornella di Leone </h1>
         <p>Sua Parceira em Cuidados Pediátricos</p>
       </div>
     </div>
@@ -130,26 +122,48 @@
     <div class="container">
       <a href="#about">Sobre Mim</a>
       <a href="#services">Serviços</a>
+      <a href="#testimonials">Depoimentos</a>
+      <a href="#blog">Dicas de Saúde</a>
+      <a href="#gallery">Galeria</a>
       <a href="#contact">Contato</a>
     </div>
   </nav>
   <div class="container">
     <section id="about">
-      <h2>Sobre Mim 🦁</h2>
-      <p>Olá! Eu sou a Dra. Ornella di Leone, pediatra com mais de 10 anos de experiência cuidando de crianças.</p>
+      <h2>Sobre Mim </h2>
+      <p>Olá! Eu sou a Dra. Ornella di Leone, pediatra com mais de 10 anos de experiência cuidando de crianças. Meu compromisso é garantir um atendimento humanizado e acolhedor para cada paciente. 💖</p>
       <img src="ornella.png" alt="Dra. Ornella di Leone" class="doctor-photo" />
-      <p class="fun-text">Cuidando dos pequenos com muito carinho! 🦁</p>
     </section>
     <section id="services">
-      <h2>Serviços 🦁</h2>
+      <h2>Serviços </h2>
       <ul>
         <li>👶 Consultas Pediátricas Gerais</li>
         <li>💉 Vacinações e Imunizações</li>
         <li>📋 Exames de Rotina</li>
+        <li>🍼 Acompanhamento do Crescimento Infantil</li>
+        <li>🌿 Dicas de Alimentação Saudável</li>
       </ul>
     </section>
+    <section id="testimonials">
+      <h2>Depoimentos</h2>
+      <p>"A Dra. Ornella sempre trata meu filho com muito carinho e paciência. Não confiaria em outra profissional!" - Fernanda L.</p>
+    </section>
+    <section id="blog">
+      <h2>Dicas de Saúde</h2>
+      <p>🔹 Como fortalecer o sistema imunológico das crianças?</p>
+      <p>🔹 Quando levar seu filho ao pediatra?</p>
+      <p>🔹 A importância da amamentação nos primeiros meses de vida.</p>
+    </section>
+    <section id="gallery">
+      <h2>Galeria</h2>
+      <div class="gallery">
+        <img src="ornella.png" alt="Imagem 1">
+        <img src="ornella.png" alt="Imagem 2">
+        <img src="ornella.png" alt="Imagem 3">
+      </div>
+    </section>
     <section id="contact">
-      <h2>Contato 🦁</h2>
+      <h2>Contato </h2>
       <p>Email: <a href="mailto:draornella@example.com">draornella@example.com</a></p>
     </section>
   </div>
