--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dra. Ornella di Leone - Pediatria</title>
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Baloo 2', sans-serif;
-      background: #fffaf1;
+      font-family: 'Poppins', sans-serif;
+      background: #f9f9f9;
       color: #333;
       line-height: 1.6;
     }
@@ -18,10 +18,10 @@
     header {
       background: linear-gradient(
         to right, 
-        rgb(250, 245, 234) 0%,  
-        rgb(250, 245, 234) 50%,  
-        rgb(252, 225, 183) 60%,  
-        rgb(231, 165, 137) 100%  
+        #faf5ea 0%,  
+        #faf5ea 50%,  
+        #fce1b7 60%,  
+        #e7a58b 100%  
       );
       color: #333;
       padding: 20px;
@@ -43,21 +43,26 @@
       width: 400px;
       height: 400px;
       margin-right: 20px;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
     header .text {
       flex: 1;
       text-align: left;
     }
-    header h1 { font-size: 3rem; margin-bottom: 10px; }
-    header p { font-size: 1.5rem; }
+    header h1 { font-size: 3rem; margin-bottom: 10px; color: #e65a50; }
+    header p { font-size: 1.5rem; color: #555; }
 
-    /* Nav */
+    /* Sticky Navigation */
     nav {
       background: #ffddc1;
       padding: 15px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       display: flex;
       justify-content: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
     nav a {
       margin: 0 20px;
@@ -66,7 +71,7 @@
       font-weight: bold;
       transition: color 0.3s, transform 0.2s;
     }
-    nav a:hover { color: #ff6f61; transform: scale(1.1); }
+    nav a:hover { color: #e65a50; transform: scale(1.1); }
 
     /* Main Content */
     .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
@@ -82,15 +87,20 @@
     section h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: #ff6f61;
+      color: #e65a50;
       font-size: 2rem;
     }
+
+    /* About Section */
     #about img.doctor-photo {
       max-width: 250px;
       width: 100%;
       display: block;
       margin: 20px auto;
+      border-radius: 10px;
     }
+
+    /* Services Section */
     ul { list-style: none; padding: 0; }
     ul li {
       padding: 10px;
@@ -98,6 +108,133 @@
       font-size: 1.2rem;
     }
     ul li:last-child { border-bottom: none; }
+
+    /* Testimonials Section */
+    #testimonials .testimonials-container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      overflow: hidden;
+    }
+    #testimonials .testimonial {
+      display: none;
+      font-size: 1.2rem;
+      line-height: 1.8;
+      padding: 20px;
+      background: #fffaf1;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: opacity 0.5s ease-in-out;
+    }
+    #testimonials .testimonial.active {
+      display: block;
+      opacity: 1;
+    }
+    #testimonials .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 24px;
+      border-radius: 50%;
+      transition: background-color 0.3s;
+    }
+    #testimonials .arrow:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+    #testimonials .arrow.left {
+      left: 10px;
+    }
+    #testimonials .arrow.right {
+      right: 10px;
+    }
+
+    /* Gallery Section */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 10px;
+      margin-top: 20px;
+    }
+    .gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Lightbox */
+    .lightbox {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+    }
+    .lightbox.active {
+      display: flex;
+    }
+
+    /* Contact Section */
+    #contact .contact-info {
+      text-align: center;
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
+    #contact .contact-info a {
+      color: #e65a50;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    #contact .contact-info a:hover {
+      color: #c94a42;
+    }
+    #contact form {
+      max-width: 500px;
+      margin: 20px auto;
+      text-align: left;
+    }
+    #contact form input, #contact form textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-family: 'Poppins', sans-serif;
+    }
+    #contact form button {
+      background: #e65a50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    #contact form button:hover {
+      background: #c94a42;
+    }
 
     /* Footer */
     footer {
@@ -146,7 +283,19 @@
     </section>
     <section id="testimonials">
       <h2>Depoimentos</h2>
-      <p>"A Dra. Ornella sempre trata meu filho com muito carinho e paciência. Não confiaria em outra profissional!" - Fernanda L.</p>
+      <div class="testimonials-container">
+        <button class="arrow left" onclick="prevTestimonial()">&#10094;</button>
+        <div class="testimonial active">
+          <p>"A Dra. Ornella sempre trata meu filho com muito carinho e paciência. Não confiaria em outra profissional!" - Fernanda L.</p>
+        </div>
+        <div class="testimonial">
+          <p>"Excelente profissional! Minha filha adora as consultas com a Dra. Ornella. Super recomendo!" - Carla M.</p>
+        </div>
+        <div class="testimonial">
+          <p>"Atendimento humanizado e muito acolhedor. A Dra. Ornella é uma pediatra incrível!" - Ricardo S.</p>
+        </div>
+        <button class="arrow right" onclick="nextTestimonial()">&#10095;</button>
+      </div>
     </section>
     <section id="blog">
       <h2>Dicas de Saúde</h2>
@@ -157,18 +306,78 @@
     <section id="gallery">
       <h2>Galeria</h2>
       <div class="gallery">
-        <img src="ornella.png" alt="Imagem 1">
-        <img src="ornella.png" alt="Imagem 2">
-        <img src="ornella.png" alt="Imagem 3">
+        <img src="gallery001.png" alt="Imagem 1" onclick="openLightbox('gallery001.png')">
+        <img src="gallery002.png" alt="Imagem 2" onclick="openLightbox('gallery002.png')">
+        <img src="gallery003.png" alt="Imagem 3" onclick="openLightbox('gallery003.png')">
       </div>
     </section>
     <section id="contact">
-      <h2>Contato </h2>
-      <p>Email: <a href="mailto:draornella@example.com">draornella@example.com</a></p>
+      <h2>Contato</h2>
+      <div class="contact-info">
+        <p>📧 Email: <a href="mailto:draornella@example.com">draornella@example.com</a></p>
+        <p>📞 Telefone: <a href="tel:+5511999999999">+55 (11) 99999-9999</a></p>
+        <p>📍 Endereço: Rua das Flores, 123 - Jardim Primavera, São Paulo - SP, CEP: 01234-567</p>
+        <p>📱 Instagram: <a href="https://www.instagram.com/draornella.pediatra" target="_blank">@draornella.pediatra</a></p>
+        <p>🕒 Horário de Atendimento:</p>
+        <ul>
+          <li>Segunda a Sexta: 08:00 - 18:00</li>
+          <li>Sábado: 08:00 - 12:00</li>
+          <li>Domingo: Fechado</li>
+        </ul>
+      </div>
+      <form>
+        <input type="text" placeholder="Seu nome" required>
+        <input type="email" placeholder="Seu email" required>
+        <textarea placeholder="Sua mensagem" rows="5" required></textarea>
+        <button type="submit">Enviar Mensagem</button>
+      </form>
     </section>
   </div>
   <footer>
     <p>&copy; 2025 Dra. Ornella di Leone - Pediatria. Todos os direitos reservados.</p>
   </footer>
+
+  <!-- Lightbox -->
+  <div class="lightbox" onclick="closeLightbox()">
+    <img src="" alt="Lightbox Image">
+  </div>
+
+  <script>
+    // Gallery Script
+    function openLightbox(src) {
+      const lightbox = document.querySelector('.lightbox');
+      const lightboxImg = lightbox.querySelector('img');
+      lightboxImg.src = src;
+      lightbox.classList.add('active');
+    }
+
+    function closeLightbox() {
+      const lightbox = document.querySelector('.lightbox');
+      lightbox.classList.remove('active');
+    }
+
+    // Testimonials Script
+    let currentTestimonialIndex = 0;
+    const testimonials = document.querySelectorAll('.testimonial');
+
+    function showTestimonial(index) {
+      testimonials.forEach((testimonial, i) => {
+        testimonial.classList.toggle('active', i === index);
+      });
+    }
+
+    function nextTestimonial() {
+      currentTestimonialIndex = (currentTestimonialIndex + 1) % testimonials.length;
+      showTestimonial(currentTestimonialIndex);
+    }
+
+    function prevTestimonial() {
+      currentTestimonialIndex = (currentTestimonialIndex - 1 + testimonials.length) % testimonials.length;
+      showTestimonial(currentTestimonialIndex);
+    }
+
+    // Initialize the testimonials
+    showTestimonial(currentTestimonialIndex);
+  </script>
 </body>
 </html>
